test_suite/tests/ui/remote/nonremote_getter.stderr
error: #[serde(getter = "...")] can only be used in structs that have #[serde(remote = "...")]
 --> $DIR/nonremote_getter.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

